--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,14 @@
     /*box-shadow: gray;*/
     
 }
+
 .logoNav{
     position: absolute;
     top: -20px;
     left: 0px;
 }
 
-/*******************************************************************************/
+/****************************personalizacion boton burguer***************************************************/
 .custom-toggler.navbar-toggler { /*cualquier elemento con las dos clases*/
     border-color: rgb(209, 16, 16)
 } 
@@ -19,9 +20,47 @@
     background-image: url( 
 "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(0, 0, 255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"); 
 }
-/***************************************************************/
+
+/*********************parte central******************************************/
+.linksAcceso{
+  background-color: rgb(27, 27, 105);
+  color: white;
+}
+.links{
+  position: relative;
+}
+
+.links span{
+  position: absolute;
+  bottom: 0px;
+  left: 0px;;
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  text-align: center;
+  font-size: 25px;
+  width: 100%;
+  height: 50px;
+  color: white;
+
+}
+.filasLuc{
+  padding-top:20px ;
+}
 
 
+/***footer********/
+.foogral{
+  background-color: rgb(104, 97, 97);
+  color: white;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.foogral div span{
+  font-weight: bold;
+}
+
+
+
+/*******************************************************media queries***********************************************/
 /********** Large devices only **********/
 @media (min-width: 1200px) {
 
@@ -52,5 +91,14 @@
     .jumbotron {
       padding: 0;
     }
-    
+
+    /******footer******/
+  .foogral div {
+    text-align: center;
+  }
+  .foogral div hr {
+    border-top: 1px solid white;
+    width: 70%;
+  }
+  
   }
