--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,10 @@
 "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(0, 0, 255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"); 
 }
 
+#tituloC{
+  text-align: center;
+}
+
 /*********************parte central******************************************/
 .linksAcceso{
   background-color: rgb(27, 27, 105);
@@ -47,6 +51,11 @@
   padding-top:20px ;
 }
 /************pagina canchas***************/
+.grilla{
+  margin-top:40px;
+}
+  
+
 
 
 /***footer********/
@@ -77,6 +86,9 @@
     .jumbotron {
       padding: 0;
     }
+    
+      
+     
    
   }
   
@@ -88,6 +100,7 @@
     .navbar-nav{/* para el menu collapsable que se superponia con el logo*/
       padding-top: 30px;
     }
+    
   
   }
   
@@ -101,6 +114,11 @@
     }
     .filasLuc{
       text-align: center;
+    }
+    .grilla img{
+      padding-left: 0px;
+      padding-right: 0px;
+      padding-bottom: 20px;
     }
     
 
